fixed question clicks, added score

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
     <div class="title">Coding Quiz</div>
 </header>
 <section>
-    <div id="question">
-        <!-- Here I've inserted question from JavaScript -->
-    </div>
-    <div id="possAns">
-        <!-- Here I've inserted options from JavaScript -->
-    </div>
+    <div class="question" id="question"></div>
+    <div class="options" id="possAns1"></div>
+    <div class="options" id="possAns2"></div>
+    <div class="options" id="possAns3"></div>
+    <div class="options" id="possAns4"></div>
 </section>
 </div>
   
