--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
 <div class="timer">Time Left:<p id="timeLeft"></p></div>  
 <div class="quizInfo">
-  <div class="preQuizInfo"><span>Coding Quiz Challenge</span></div>
-  <div class="info"><span>Try to answer the following code-related questions within the allotted time. 
+  <div class="preQuizInfo" id="preQuizTitle"><span>Coding Quiz Challenge</span></div>
+  <div class="info" id="info"><span>Try to answer the following code-related questions within the allotted time. 
     An incorrect answer will be penalized with a deduction in time.  A correct answer will be rewarded
     with 5 points.</span></div>
 </div>  
-<div class="start_btn"><button>Start Quiz</button></div>  
+<div class="start_btn" id="start"><button>Start Quiz</button></div>  
 
 <!-- The quiz runs here-->
 <div class="quiz">
   <header>
-    <div class="title">Coding Quiz</div>
+    <div class="title" id="title">Coding Quiz</div>
 </header>
 <section>
     <div class="question" id="question"></div>
