--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 
 <body>
-<div class="timer">Time Left:<p id="timeLeft"></p></div>  
-<div class="quizInfo">
+<div class="timer">Time Left:<span id="timeLeft"></span></div>  
+<div class="quizInfo" id="quizInfo">
   <div class="preQuizInfo" id="preQuizTitle"><span>Coding Quiz Challenge</span></div>
   <div class="info" id="info"><span>Try to answer the following code-related questions within the allotted time. 
-    An incorrect answer will be penalized with a deduction in time.  A correct answer will be rewarded
-    with 5 points.</span></div>
+    An incorrect answer will be penalized with a deduction of 10 seconds.  A correct answer will be rewarded
+    with 10 points.</span></div>
 </div>  
 <div class="start_btn" id="start"><button>Start Quiz</button></div>  
 
 <!-- The quiz runs here-->
 <div class="quiz">
   <header>
-    <div class="title" id="title">Coding Quiz</div>
+    <div class="title" id="title"></div>
 </header>
 <section>
-    <div class="question" id="question"></div>
-    <div class="options" id="possAns1"></div>
-    <div class="options" id="possAns2"></div>
-    <div class="options" id="possAns3"></div>
-    <div class="options" id="possAns4"></div>
+    <div class="hidden" id="question"></div>
+    <div class="hidden" id="possAns1"></div>
+    <div class="hidden" id="possAns2"></div>
+    <div class="hidden" id="possAns3"></div>
+    <div class="hidden" id="possAns4"></div>
 </section>
 </div>
   
