show saved scores

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     <div class="hidden" id="possAns4"></div>
 </section>
 </div>
-<div class="hidden" id="showScores">
-
-</div>  
+<div id ="showScores">
+  <div class="hidden" id="scoreTitle"></div>  
+  <div class="hidden" id="indScore"></div>
+</div>
 <script src="./assets/js/script.js"></script>
 </body>
 </html>
